Fix navbar on mobile

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -196,7 +196,7 @@ header {
           background-color: initial;
         }
 
-        @media (min-width: 768px) {
+        @media (min-width: 360px) {
           padding: 0 10px;
           height: 80px;
           display: flex;
